--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="app_context">App Context</string>
     <string name="activity_context">Activity Context</string>
     <string name="fragment_context">Fragment context</string>
+    <string name="full_name">%1s %2s</string>
 </resources>
